tests/errors/kind_float_of_int.f90
program string_kind_integer
    implicit none
    real(4.2) :: x
end program
